# DockerFibonnaci

./: Dockerfile  fib.py  pyproject.toml
