[tool.poetry]
name = "fib_api"
version = "0.1.0"
description = "first test version"
authors = ["shiva12494 <33601706+shiva12494@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
